kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-app
  namespace: default
spec:
  type: NodePort
  selector:
    app: vue-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
