kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vue-app
spec:
  defaultBackend:
    service:
      name: vue-app
      port:
        number: 80
